--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ h3{
 
 h4{
   color: #00ed82;
-  font-size: 13px;
+  font-size: 18px;
+  letter-spacing: 1px;
   text-transform: uppercase;
 }
 .btn{
@@ -86,9 +87,20 @@ h4{
   margin-top: 5px;
   text-decoration: underline;
 }
+
+.text-xl{
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.sub-text{
+  max-width: 850px;
+  margin-bottom: 10px;
+  font-size: 24px;
+}
 /* Header */
 .header{
-  height: 530px;
+  height: 700px;
   background: url(../img/header.jpg)
   no-repeat center center / cover;
 }
@@ -96,6 +108,8 @@ h4{
   display: flex;
   justify-content: flex-end;
   padding: 20px 40px;
+  z-index: 2;
+  position: relative;
 }
 
 .header nav .login-btn{
@@ -117,7 +131,7 @@ header .header-content{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 90px;
 }
 
 .header .header-text-1{
@@ -129,8 +143,24 @@ header .header-content{
   margin: 25px;
 }
 
+.header::after{
+  content:'';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  z-index: 1;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.76) 15.54%,
+    rgba(0, 0, 0, 0.192) 60.23%,
+    rgba(0, 0, 0, 8e-5) 100%
+  );
+}
 
-/* Sub-Header */
+
+/* SUB-HEADER */
 /* gradient copied from hulu site via inspection of this section */
 .sub-header{
   display: grid;
@@ -157,7 +187,134 @@ header .header-content{
   text-align: center;
 }
 
+
+/* CATEGORIES */
+.categories {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 90px 40px;
+}
+
+.categories .covers {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.categories .covers > div {
+  height: 600px;
+  width: 400px;
+  position: relative;
+}
+
+.categories .cover-grad {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+      156.82deg,
+      rgba(0, 0, 0, 0.6) 4.58%,
+      rgba(0, 0, 0, 0) 69.61%
+    ),
+    linear-gradient(24.5deg, rgba(0, 0, 0, 0.2) 4.71%, rgba(0, 0, 0, 0) 71.49%);
+}
+
+.categories .cover-text{
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  text-align: left;
+}
+
+.categories .cover-1 {
+  background: url('../img/cover-1.jpg') no-repeat center center / cover;
+}
+.categories .cover-2 {
+  background: url('../img/cover-2.jpg') no-repeat center center / cover;
+}
+.categories .cover-3 {
+  background: url('../img/cover-3.jpg') no-repeat center center / cover;
+}
+.categories .cover-4 {
+  background: url('../img/cover-4.jpg') no-repeat center center /cover;
+}
+
+/* Live */
+.live{
+  background: #151516;
+  padding: 40px;
+}
+
+.live-border{
+  border: 4px solid #1ce783;
+  border-radius:16px;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.live a {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-top: 20px;
+  text-decoration: underline;
+}
+
+/* LIVE SPORTS */
+.live-sports{
+  background: url('../img/live-sports.jpg') no-repeat center center / cover; 
+  height: 800px;
+  position: relative;
+}
+
+.live-sports-content {
+  position: absolute;
+  top: 160px;
+  left: 100px;
+  max-width: 550px;
+}
+
+.live-sports-logos{
+  width: 300px;
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.live-sports-logos > div {
+  background: url('../img/network-logo-bg.png') no-repeat center center / cover;
+  height: 60px;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.live-sports-logos img {
+  width: 40px;
+}
+
+/* FOOTER */
+
 /* Media Queries */
+@media(max-width: 1100px){
+  .categories .covers {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
 @media(max-width: 768px){
   .header .logo{
     width: 200px;
@@ -166,12 +323,51 @@ header .header-content{
     text-align: center;
     padding: 0 20px;
   }
+
+  .header .header-text-1{
+    margin-bottom: 40px;
+  }
+  .header .header-text-2 {
+    display: none;
+  }
   .sub-header{
     grid-template-columns: 1fr;
+    text-align: center;
+    gap: 20px;
   }
   .sub-header img{
     width: 250px;
     margin: auto;
+  }
+  .sub-header > div:last-of-type{
+    justify-self: center;
+    align-self: center;
+  }
+
+  .text-xl{
+    line-height: 1.3;
+    font-size: 40px;
+
+  }
+  .sub-text{
+    font-size: 20px;
+  }
+  .categories .covers {
+    grid-template-columns: 1fr;
+  }
+
+  .live-border{
+    padding: 30px 10px;
+  }
+  .live-sports{
+    background: url('../img/live-sports-small.jpg') no-repeat center center/cover;
+  }
+  
+  .live-sports-content {
+    top: 30px;
+    left: 30px;
+    margin-top: 60px;
+  
   }
 }
 
