added footer, login modal opens and closes

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,11 @@ h4{
   color: white;
   border-color: #ccc;
 }
+
+.btn-dark {
+  background: black;
+  color: white;
+}
 .legal-text{
   font-size: 10px;
   color: #cccc;
@@ -306,6 +311,130 @@ header .header-content{
 }
 
 /* FOOTER */
+.footer{
+  background: #ebedf2;
+  color: #333;
+}
+
+.footer a {
+  color: #333;
+}
+
+.footer-container{
+ max-width: 1100px;
+ margin: auto;
+ padding: 40px;
+}
+
+.footer-lists {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-lists .list-head{
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.divider {
+  width: 100%;
+  height: 3px;
+  border-top: 1px #ccc solid;
+  margin: 30px 0;
+
+}
+
+.social-icons img{
+  width: 25px;
+  height: 25px;
+  margin-right: 25px;
+  
+}
+
+/* MODAL */
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-box {
+  margin: 10% auto;
+  width: 400px;
+  background: white;
+  color: #333;
+  position: relative;
+  animation: modalopen 1s;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.modal-body {
+  padding: 50px;
+}
+
+.modal-body h3 {
+  font-weight: bold;
+}
+
+.modal-body .btn {
+  width: 100%;
+  margin-top: 30px;
+}
+.modal .close {
+  cursor: pointer;
+  height: 23px;
+  width: 23px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.modal .modal-footer {
+  background: #f7f7f9;
+  color: #333;
+  padding: 20px 0;
+  border-top: #eee 1px solid;
+  text-align: center;
+}
+
+.modal .modal-footer a {
+  color: steelblue;
+}
+
+/* FORM */
+
+.form-control{
+  margin: 20px 20px;
+}
+
+.form-control label{
+  display: block;
+  text-transform: uppercase;
+}
+
+.form-control input {
+  width: 100%;
+  border: 2px #ccc solid;
+  border-radius: 5px;
+  height: 50px;
+  padding: 5px;
+}
 
 /* Media Queries */
 @media(max-width: 1100px){
@@ -368,6 +497,14 @@ header .header-content{
     left: 30px;
     margin-top: 60px;
   
+  }
+
+  .footer-lists {
+    flex-direction: column;
+  }
+
+  .modal .modal-box{
+    width: 325px;
   }
 }
 
